--- a/themes/yilia-plus/_config.yml
+++ b/themes/yilia-plus/_config.yml
@@ -68,7 +68,7 @@ reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
 alipay: /img/alipay.jpg
 # 微信二维码图片地址
-weixin: /img/weixin.png
+weixin: /img/weixin.jpg
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
@@ -90,7 +90,7 @@ google_analytics: ''
 favicon: /favicon.ico
 
 # 你的头像url
-avatar: /img/head.jpg
+avatar: /img/head.png
 
 # 是否开启分享
 share_jia: true
